# ComfyUI-Prompt-Manager

./: LICENSE  README.md  __init__.py
ComfyUI-Prompt-Manager/: __init__.py  pyproject.toml
ComfyUI-Prompt-Manager/web/comfyui/: top_prompt_icon.js
data/: prompt_database.json
static/prompt/: Prompt.html
web/comfyui/: prompt_node.js
